# open-talent-local-ai

./: .env.example  .env.shared  .file-checksums.txt  .gitignore  .gitmodules  .opentalent.pids  .pre-commit-config.yaml  .releaserc.js  =2.0.25  ACTION_PLAN_QUICK_REFERENCE.md  AGENTS.md  AGENTS_ACHIEVEMENTS.md  AGENT_INTEGRATION_ANALYSIS.md  ANALYSIS_COMPLETE_DEC15.md  API_CATALOGS_UPDATE_QUICK_REFERENCE.md  API_CATALOG_UPDATES_DEC14_FINAL.md  API_CATALOG_UPDATES_DEC15_FINAL.md  API_CATALOG_UPDATES_DEC16_FINAL.md  API_CATALOG_UPDATE_DEC14.md  API_DOCUMENTATION_ANALYSIS_SUMMARY.md  API_ENDPOINTS_GAP_ANALYSIS.md  API_ENDPOINTS_QUICK_REFERENCE_DEC15.md  API_ENDPOINTS_QUICK_REFERENCE_DEC16.md  API_ENDPOINTS_SCHEMA_AUDIT_DEC15.md  API_PROGRESS_UPDATE_DEC15.md  API_VALIDATION_FRAMEWORK_DELIVERY.md  API_VALIDATION_TOOLS_QUICK_REFERENCE.md  ARCHITECTURE_ANALYSIS_AND_RECOMMENDATIONS.md  AUDIT_INDEX_DEC15.md  AUDIT_SUMMARY.txt  AVATAR_ROUTES_DECISION_GUIDE.md  AVATAR_SERVICE_ENDPOINT_ANALYSIS.md  AVATAR_SERVICE_EXISTING_IMPLEMENTATION_SCAN.md  AVATAR_SERVICE_FIXED_DEC16.txt  AVATAR_SERVICE_IMPLEMENTATION_INDEX.md  AVATAR_SERVICE_ROUTES_AUDIT.md  AVATAR_SERVICE_SPECIFICATION_CREATED.md  AVATAR_SERVICE_TEST_SUITE_COMPLETE.md  AVATAR_SERVICE_VERIFICATION_COMPLETE.md  CANDIDATE_SERVICE_IMPROVEMENTS_COMPLETE.md  (+226 more)
.gemini/: settings.json
.jules/: diff.patch
.semgrep/: rules.yaml
agents/: docker-compose.yml  start-agents.sh  stop-agents.sh
ai-orchestra-simulation/: .env.example  .eslintrc.json  Dockerfile  Dockerfile.dev  avatar-performance-test.js  avatar-renderer-v2.js  avatar-renderer.js  check-local-models.js  docker-compose.prod.yml  docker-compose.yml  index.js  investor-demo.sh  load_test_basic.py  load_test_basic_errors.json  load_test_basic_report.json  load_test_basic_system_stats.json  load_test_endurance.py  load_test_stress.py  main.js  manual-test.sh  package-lock.json  package.json  procedural-viewer.js  profiling_script.js  run-integration-tests.sh  run-phase1-browser-test.sh  run-phase1-test.js  run-phase1-verification.js  start-poc.sh  test-PhonemeMapper-Phase2-integration.js  test-avatar-integration-simple.sh  test-avatar-integration.js  test-e2e-integration.js  test-gltf-loading.js  test-lip-sync-flow.js  test-phase3-integration.js  test-r3f-renderer.js  test-rpm-api.js  test-rpm-integration.js  test-rpm-morph-targets.js  (+6 more)
ci_venv/: pyvenv.cfg
config/: docker-compose.yml
desktop-app/: .npmrc  BUILD_SUMMARY.md  CHANGES.md  DAY2_COMPLETE.md  MODEL_SETUP.md  MODULARIZATION_QUICKSTART.md  MODULAR_ARCHITECTURE_PLAN.md  QUICK_START.md  README.md  STATUS.md  WINDOWS_DEMO.md  electron-builder.yml  jest.config.js  package-lock.json  package.json  setup-models.sh  tailwind.config.js  tsconfig.json  (+1 more)
microservices/user-service/: API_ENDPOINTS.md  Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup_test_db.sh  test-jwt-integration.sh  test_docker.sh
microservices/user-service/app/: config.py  database.py  models.py  routers.py  schemas.py  utils.py
microservices/user-service/migrations/: env.py
microservices/user-service/migrations/versions/: 0001_initial.py
microservices/user-service/tests/: conftest.py  test_api_endpoints.py  test_jwt_utils.py  test_rls_policies.py  test_user_profiles.py
microservices_LEGACY_ARCHIVE/scout-service/: agent_health.py  agent_registry.py  agent_routes.py  main.py  pyproject.toml
services/candidate-service/: README.md  README_AUDIT.md  __init__.py  main.py  openapi.json  pyproject.toml  requirements.txt  schemas.py  test_docker.sh
services/candidate-service/.github/workflows/: ci.yml
services/candidate-service/tests/: test_assessments.py  test_auth_stub.py  test_availability.py  test_bulk_operations.py  test_candidate_service.py  test_candidate_status.py  test_interviews.py  test_pagination.py  test_search_filters.py
services/candidate-service/tests/integration/: test_candidate_service_integration.py
services/candidate-service/tests/unit/: test_candidate_service_unit.py
services/candidate-service/vector_matching/: __init__.py  embeddings.py  models.py  service.py
services/interview-service/: Dockerfile  README.md  README_AUDIT.md  config.py  demo_question_builder.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  schemas.py  start_ai_services.sh  test_question_builder_vllm.py  test_vetta_endpoints.sh  webrtc_signal.py
services/interview-service/alembic/: env.py
services/interview-service/alembic/versions/: 1f2b8ae492b8_.py  dbc9b50dd47a_create_system_version_table.py  e29506195640_initial_migration.py  f6de77eb2e44_add_initial_system_version_record.py
services/interview-service/app/: main.py
services/interview-service/app/alembic/: env.py
services/interview-service/app/alembic/versions/: a4bf562f4cf9_init.py  db36e3de88cc_add_missing_tables.py
services/interview-service/app/api/: deps.py  main.py
services/interview-service/app/api/routes/: interview.py  question_routes.py  system.py  users.py
services/interview-service/app/core/: config.py  db.py  security.py
services/interview-service/app/crud/: demo_interview_session.py  interview.py  user.py
services/interview-service/app/db/: __init__.py  base.py  session.py
services/interview-service/app/db/models/: demo_interview_session.py  search_criteria.py  system_version.py
services/interview-service/app/schemas/: demo_interview_session.py  interview.py  user.py
services/interview-service/app/services/: avatar_service.py  conversation_service.py
services/interview-service/reference_guardrails_ts/src/: middleware.ts  server.ts
services/interview-service/routes/: interview_routes.py  vetta_routes.py
services/interview-service/services/: question_builder.py  vetta_ai.py  vetta_ai_ollama.py
services/interview-service/tests/: conftest.py  test_ai_intelligence.py  test_interview.py  test_interview_negative.py  test_interview_service.py  test_interview_service_aligned.py  test_main_implementation.py  test_minimal_endpoints.py  test_question_builder.py  test_system.py  test_system_negative.py  test_users.py
(+1417 files in other folders)
