[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # Isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
    "ISC",# flake8-implicit-str-concat
    "ICN",# flake8-import-conventions
    "TID",# flake8-tidy-imports
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["scout_service"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-service"
version = "0.1.0"
description = "AI-powered talent discovery and candidate sourcing service"
authors = [
    {name = "OpenTalent Team"}
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "pyttsx4==3.0.12",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "torchaudio==2.1.0",
    "transformers==4.35.0",
    "diffusers==0.24.0",
    "accelerate==0.24.0",
    "opencv-python==4.8.1.78",
    "numpy==1.24.3",
    "scipy==1.11.3",
    "tqdm==4.66.1",
    "imageio==2.31.0",
    "moviepy==1.0.3",
    "watchdog==3.0.0",
    "Pillow==10.1.0",
    "librosa==0.10.1",
    "soundfile==0.12.1",
    "matplotlib==3.8.0"
]
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
scout-service = "main:app"
