[tool.poetry]
name = "candidate-service"
version = "0.1.0"
description = "open-talent Candidate Service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.1"
fastembed = "^0.2.7"
lancedb = "^0.8.0"
numpy = "^1.26.0"
pyarrow = "^15.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
