[tool.poetry]
name = "interview-service"
version = "0.1.0"
description = "Interview AI Service for OpenTalent Platform"
authors = ["Md [TECH_LEAD] <asif@OpenTalent.io>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
pydantic = "^2.7.4"
typing-extensions = "^4.12.2"
sqlmodel = "^0.0.24"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.5"
pydantic-settings = "^2.10.1"
psycopg = {extras = ["binary"], version = "^3.2.10"}
sqlalchemy = "^2.0"
sqlalchemy_utils = "^0.41.1"
email-validator = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.15.0"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # Isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
    "ISC",# flake8-implicit-str-concat
    "ICN",# flake8-import-conventions
    "TID",# flake8-tidy-imports
    "PL", # Pylint
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the first line
    "D406", # Section name should end with a colon
    "D407", # Missing dashed underline after section header
    "D413", # Missing blank line after last section
    "PLR0913", # Too many arguments in function
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py

[tool.ruff.lint.pydocstyle]
convention = "google" # Use Google-style docstrings
