[tool.poetry]
name = "interview-service"
version = "0.1.0"
description = "Interview AI Service for OpenTalent Platform"
authors = ["Md [TECH_LEAD] <asif@OpenTalent.io>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
pydantic = "^2.7.4"
typing-extensions = "^4.12.2"
sqlmodel = "^0.0.24"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.5"
pydantic-settings = "^2.10.1"
psycopg = {extras = ["binary"], version = "^3.2.10"}
sqlalchemy = "^2.0"
sqlalchemy_utils = "^0.41.1"
email-validator = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.15.0"
